--- a/UsedCars.Web/UsedCars.Web.csproj
+++ b/UsedCars.Web/UsedCars.Web.csproj
@@ -17,6 +17,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="6.0.3" />
     </ItemGroup>
 
