--- a/UsedCars.Web/client-app/package.json
+++ b/UsedCars.Web/client-app/package.json
@@ -2,17 +2,23 @@
   "name": "client-app",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://localhost:44385",
+  "proxy": "https://localhost:5051",
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.0",
+    "@mui/x-data-grid": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "axios": "^0.26.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
+    "react-ts-loaders": "^1.2.1",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
