--- a/UsedCars.Web/client-app/package.json
+++ b/UsedCars.Web/client-app/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.6.0",
     "@mui/x-data-grid": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.3",
@@ -15,6 +16,7 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "axios": "^0.26.1",
+    "pigeon-maps": "^0.21.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
